@@ -3,6 +3,10 @@ BUGS FIXED:
   * soundgen(): proper wiggling of secondary control parameters if temperature > 0
   * soundgen(): vibratoFreq and vibratoDep can go beyond preset levels if invalidArgAction = 'ignore'
 
+MINOR:
+  * pitch_app(): an option to turn off automatic updating of the optimal pitch contour to speed up the processing of long audio files
+
+
           CHANGES IN SOUNDGEN VERSION 1.6.2 [06-February-2020]
 BUGS FIXED:
   * playme(): '...' removed from documentation (new CRAN requirements)
